--- a/index.html
+++ b/index.html
@@ -1,1 +1,85 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <title>Portafolio de Irisnel</title>
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial;
+            background: #f3f3f3;
+        }
 
+        nav {
+            background: #222;
+            padding: 15px;
+            position: sticky;
+            top: 0;
+        }
+
+        nav a {
+            color: white;
+            margin-right: 20px;
+            text-decoration: none;
+            font-weight: bold;
+        }
+
+        section {
+            padding: 60px;
+            background: white;
+            margin: 30px auto;
+            width: 80%;
+            border-radius: 12px;
+            box-shadow: 0 0 10px #aaa;
+        }
+
+        h2 {
+            margin-top: 0;
+        }
+    </style>
+</head>
+
+<body>
+
+    <!-- MENÚ -->
+    <nav>
+        <a href="#sobre-mi">Sobre mí</a>
+        <a href="#proyectos">Proyectos</a>
+        <a href="#contacto">Contacto</a>
+    </nav>
+
+    <!-- SECCIÓN 1 -->
+    <section id="sobre-mi">
+        <h2>Sobre mí</h2>
+        <p>Hola, soy Irisnel, estudiante de programación en la UTP.</p>
+        <p>Aquí está mi portafolio con todos los trabajos del curso.</p>
+    </section>
+
+    <!-- SECCIÓN 2 -->
+    <section id="proyectos">
+        <h2>Proyectos</h2>
+
+        <h3>Proyecto 1 – Condicionales</h3>
+        <p>Descripción del proyecto.</p>
+        <a href="proyecto1/">Ver código</a>
+
+        <h3>Proyecto 2 – Bucles</h3>
+        <p>Descripción del proyecto.</p>
+        <a href="proyecto2/">Ver código</a>
+
+        <h3>Proyecto 3 – Arreglos</h3>
+        <p>Descripción del proyecto.</p>
+        <a href="proyecto3/">Ver código</a>
+
+        <!-- Aquí puedes seguir metiendo más tareas -->
+    </section>
+
+    <!-- SECCIÓN 3 -->
+    <section id="contacto">
+        <h2>Contacto</h2>
+        <p>Correo: tu-correo@ejemplo.com</p>
+        <p>GitHub: github.com/tuusuario</p>
+    </section>
+
+</body>
+</html>
