--- a/index.html
+++ b/index.html
@@ -309,11 +309,11 @@
                     </div>
                     <div class="project-content">
                         <!-- EDITAR: Título y descripción del taller -->
-                        <h3>Taller 3</h3>
+                        <h3>Taller práctico 3</h3>
                         <p>Tercer taller enfocado en la creación de una interfaz y conexión a base de datos MySQL.</p>
                         <div class="project-links">
                             <!-- EDITAR: Enlace al taller -->
-                            <a href="ENLACE_ONEDRIVE_O_PDF_AQUI" target="_blank">Revisar</a>
+                            <a href="https://github.com/irvinMartinez2709/irvinMartinez2709.github.io/tree/main/assets/tallerPractico3" target="_blank">Revisar</a>
                         </div>
                     </div>
                 </div>
