--- a/index.html
+++ b/index.html
@@ -480,8 +480,8 @@
             <div class="contact-info">
                 <p>¿Tienes alguna pregunta o quieres más información sobre mis trabajos?</p>
                 <!-- EDITAR: Información de contacto -->
-                <p>Correo: <a href="mailto:tu-correo@ejemplo.com">tu-correo@ejemplo.com</a></p>
-                <p>GitHub: <a href="https://github.com/tuusuario" target="_blank">github.com/tuusuario</a></p>
+                <p>Correo: <a href="mailto:irvin.martinez.pitti@gmail.com>irvin.martinez.pitti@gmail.com</a></p>
+                <p>GitHub: <a href="https://github.com/irvinMartinez2709" target="_blank">github.com/irvinMartinez2709</a></p>
             </div>
         </div>
     </section>
