--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
             <div class="contact-info">
                 <p>¿Tienes alguna pregunta o quieres más información sobre mis trabajos?</p>
                 <!-- EDITAR: Información de contacto -->
-                <p>Correo: <a href="mailto:irvin.martinez.pitti@gmail.com>irvin.martinez.pitti@gmail.com"</a></p>
+                <p>Correo: <a href="mailto:irvin.martinez.pitti@gmail.com">irvin.martinez.pitti@gmail.com</a></p>
                 <p>GitHub: <a href="https://github.com/irvinMartinez2709" target="_blank">github.com/irvinMartinez2709</a></p>
             </div>
         </div>
